@@ -1,5 +1,8 @@
 2010-04-06  Jason Merrill  <jason@redhat.com>
 
+	PR c++/43648
+	* name-lookup.c (constructor_name_p): Allow X::~X even for typedefs.
+
 	PR c++/43621
 	* pt.c (maybe_update_decl_type): Check the return value from
 	push_scope.
